# analysis3d

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
docs/design/: analysis3d-20260624-mvp.md  analysis3d-20260628-data-pipeline.md  axis-scale-20260629-professional.md
docs/dev/: PLAN-001-web-mvp-OUTCOME.md  PLAN-001-web-mvp.md  PLAN-002-filter-transform-workbench-OUTCOME.md  PLAN-002-filter-transform-workbench.md  PLAN-003-review-fixes-OUTCOME.md  PLAN-003-review-fixes.md  PLAN-004-axis-range-readability-OUTCOME.md  PLAN-004-axis-range-readability.md  PLAN-005-axis-ticks-OUTCOME.md  PLAN-005-axis-ticks.md  PLAN-006-professional-axis-scale-OUTCOME.md  PLAN-006-professional-axis-scale.md
examples/web-demo/: index.html  package.json  tsconfig.json  vite.config.ts
examples/web-demo/src/: main.ts  styles.css
server/: README.md  pyproject.toml
server/analysis3d_server/: __init__.py  main.py
