[project]
name = "analysis3d-server"
version = "0.1.0"
description = "FastAPI backend for Analysis3D"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.0",
  "fastapi>=0.115.0",
  "pyarrow>=18.0.0",
  "python-multipart>=0.0.12",
  "uvicorn[standard]>=0.30.0"
]

[project.scripts]
analysis3d-server = "analysis3d_server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
